syntax = "proto3";

package ru.otus.protobuf;

option java_multiple_files = true;

message ClientMessage {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message ServerMessage {
  int32 value = 1;
}

service RemoteIncrementor {
  rpc getClients(ClientMessage) returns (stream ServerMessage);
}
